<resources>
    <string name="app_name">Filmes</string>
    <string name="name">Nome</string>
    <string name="tel">(41) 99999-9999</string>
    <string name="mail">mail@gmail.com</string>
    <string name="site">up.edu.br</string>
    <string name="editar">Editar</string>
    <string name="favorito">Favorito</string>
    <string name="excluir">Excluir</string>
    <string name="userPhoto">Foto do usuário</string>
    <string name="endereco">Endereço</string>
    <string name="imagem">Foto do contato</string>
    <string name="imgPhone">Icone telefone</string>
    <string name="imgMail">Icone email</string>
    <string name="imgSite">Icone site</string>
    <string name="imgAddress">Icone endereço</string>
    <string name="imgName">Icone nome</string>
    <string name="salvar">salvar</string>
    <string name="empty_not_saved">Campo vazio, favor arrumar.</string>
    <string name="moeda">0.00</string>
    <string name="modelo">Modelo</string>
    <string name="txtModelo">Modelo:</string>
    <string name="txtPreco">Preço:</string>
    <string name="txtNome">Nome:</string>
    <string name="txtDescricao">Descrição:</string>
    <string name="hintNome">Nome</string>
    <string name="hintDescricao">Descrição</string>
    <string name="deletar" />
</resources>
